--- a/browser/render/components/side-bar/side-bar.sass
+++ b/browser/render/components/side-bar/side-bar.sass
@@ -17,6 +17,10 @@
         margin: 0
     .language-list-label
       display: none
+    .tag-list
+      display: none
+    .language-list
+      padding-left: 10px
     .languages
       li
         padding: 0
