--- a/browser/render/components/snippet-item/snippet-item.sass
+++ b/browser/render/components/snippet-item/snippet-item.sass
@@ -54,6 +54,7 @@
     align-items: center
     padding: 0 10px
     font-style: italic
+    margin-bottom: 0
     .icon
       margin-right: 10px
       font-size: 13px
